--- a/app/blocks/banner/banner.jade
+++ b/app/blocks/banner/banner.jade
@@ -6,86 +6,88 @@ mixin banner()
 			.row.banner__row
 				.banner__nav
 				.banner__dots
-				.col-12.col-md-12.col-lg-8.banner__slider
+				.col-12.col-md-12.col-lg-8
+					.banner__slider
 
-					.banner__slide
-						a.banner__link(href="#")
+						.banner__slide
+							a.banner__link(href="#")
 
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто 
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span> 
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
-					.banner__slide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span>
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
-					.banner__slide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span>
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
 
-					.banner__slide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто 
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span> 
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
-					.banner__slide.banner__slide_hide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто 
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide.banner__slide_hide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span> 
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
-					.banner__slide.banner__slide_hide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide.banner__slide_hide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span>
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
-					.banner__slide.banner__slide_hide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide.banner__slide_hide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span>
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
-					.banner__slide.banner__slide_hide
-						a.banner__link(href="#")
-						img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
-						.banner__w
-							h1.banner__title.title Широкий выбор шин и дисков для любых авто
-							.banner__text Консультации специалистов по подбору <br/>и доставка по низким ценам
+						.banner__slide.banner__slide_hide
+							a.banner__link(href="#")
+							img.banner__image(src='assets/images/content/banner-img@2x.jpg' alt='')
+							.banner__w
+								h1.banner__title.title Широкий выбор шин <span>и дисков для любых авто</span>
+								.banner__text Консультации специалистов по подбору <span>и доставка по низким ценам</span>
 
 				
 
-				.col-12.col-md-12.col-lg-4.banner__advantages.advantages
-					ul.advantages__list
-						li.advantages__item.advantages__item_1 
-							| Гарантия низкой цены
-							+icon('advantages-badge-left', true).advantages__icon-left
-							+icon('advantages-badge-right', true).advantages__icon-right
-						li.advantages__item.advantages__item_2 
-							| КАСКО на шины
-							+icon('advantages-badge-left', true).advantages__icon-left
-							+icon('advantages-badge-right', true).advantages__icon-right
-						li.advantages__item.advantages__item_3 
-							| Бесплатный шиномонтаж
-							+icon('advantages-badge-left', true).advantages__icon-left
-							+icon('advantages-badge-right', true).advantages__icon-right
-						li.advantages__item.advantages__item_4 
-							| Покупаем БУ шины!!!
-							+icon('advantages-badge-left', true).advantages__icon-left
-							+icon('advantages-badge-right', true).advantages__icon-right
+				.col-12.col-md-12.col-lg-4
+					.banner__advantages.advantages
+						ul.advantages__list
+							li.advantages__item.advantages__item_1 
+								| Гарантия низкой цены
+								+icon('advantages-badge-left', true).advantages__icon-left
+								+icon('advantages-badge-right', true).advantages__icon-right
+							li.advantages__item.advantages__item_2 
+								| КАСКО на шины
+								+icon('advantages-badge-left', true).advantages__icon-left
+								+icon('advantages-badge-right', true).advantages__icon-right
+							li.advantages__item.advantages__item_3 
+								| Бесплатный шиномонтаж
+								+icon('advantages-badge-left', true).advantages__icon-left
+								+icon('advantages-badge-right', true).advantages__icon-right
+							li.advantages__item.advantages__item_4 
+								| Покупаем БУ шины!!!
+								+icon('advantages-badge-left', true).advantages__icon-left
+								+icon('advantages-badge-right', true).advantages__icon-right
 
 
 	// end banner
