--- a/app/blocks/brands/brands.jade
+++ b/app/blocks/brands/brands.jade
@@ -5,47 +5,51 @@ mixin brands()
 
 		.brands__container.container
 			.row
-				h2.col-12.brands__title.title Популярные бренды шин и <a href="#">дисков</a>
+				.col-12
+					h2.brands__title.title Популярные бренды шин и <a href="#">дисков</a>
 
 			.brands__list-nav
-			.row.brands__list
-				a.col-12.brands__brand(href="#")
+			.brands__list
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-1.png", alt="Continental")
 						span.brands__name Continental
+			
 
-				a.col-12.brands__brand(href="#")
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-2.png", alt="Yokohama")
 						span.brands__name Yokohama
 
-				a.col-12.brands__brand(href="#")
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-3.png", alt="Hankook")
 						span.brands__name Hankook
-
-				a.col-12.brands__brand(href="#")
+	
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-4.png", alt="Nokian")
 						span.brands__name Nokian
 
-				a.col-12.brands__brand(href="#")
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-5.png", alt="Matador")
 						span.brands__name Matador
+		
 
-				a.col-12.brands__brand(href="#")
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-6.png", alt="Cordiant")
 						span.brands__name Cordiant
+	
 
-				a.col-12.brands__brand(href="#")
+				a.brands__brand(href="#")
 					.brands__w
 						figure.brands__image
 							img(src="assets/images/content/brand-1.png", alt="brand")
