--- a/app/blocks/cards/cards.jade
+++ b/app/blocks/cards/cards.jade
@@ -1,5 +1,5 @@
 mixin cards()
-	article.col-12.featured__card.card
+	article.featured__card.card
 
 		.card__inner
 			.card__size 13-17"
@@ -43,7 +43,7 @@ mixin cards()
 				a.card__button.button.button_big(href="#") В корзину
 
 
-	article.col-12.featured__card.card
+	article.featured__card.card
 		.card__inner
 			.card__size 13-17"
 
@@ -83,7 +83,7 @@ mixin cards()
 				a.card__button.button.button_big(href="#") В корзину
 
 
-	article.col-12.featured__card.card.card_out
+	article.featured__card.card.card_out
 		.card__inner
 			.card__size 13-17"
 
@@ -112,7 +112,7 @@ mixin cards()
 				a.card__button.button.button_disabled(href="#") Уведомить
 
 
-	article.col-12.featured__card.card
+	article.featured__card.card
 		.card__inner
 			.card__size 13-17"
 
@@ -153,7 +153,7 @@ mixin cards()
 				a.card__button.button.button_big(href="#") В корзину
 
 
-	article.col-12.featured__card.card
+	article.featured__card.card
 		.card__inner
 			.card__size 13-17"
 			.card__meta
