--- a/app/blocks/text/text.styl
+++ b/app/blocks/text/text.styl
@@ -1,16 +1,19 @@
 .text
 	&__container
 		padding-top 30px
-		padding-bottom 40px
-		+rmin($sm)
+		padding-bottom 18px
+		
+		+rmin($md)
 			padding-top 40px
+			
 	&__col 
 		display flex
 		align-items flex-start
 
 	&__image
 		display none
-		+rmin($sm)
+		
+		+rmin($md)
 			display block
 			margin-right 30px
 			flex-shrink 0
