--- a/app/blocks/advantages/advantages.styl
+++ b/app/blocks/advantages/advantages.styl
@@ -3,10 +3,15 @@
 		display flex
 		flex-wrap wrap
 		justify-content space-between
+		
 		+rmin($md)
 			margin-top 20px
+			padding-left 3px
+			padding-right 3px
+		
 		+rmin($lg)
 			margin-top 0
+	
 	&__item
 		position relative
 		margin-bottom 16px
@@ -28,6 +33,9 @@
 		font-weight 600
 		line-height 1
 		
+		+rmin($md)
+			flex-basis 307px
+
 		+rmin($lg)
 			flex-grow 1	
 
