--- a/app/blocks/banner/banner.styl
+++ b/app/blocks/banner/banner.styl
@@ -1,11 +1,14 @@
 .banner
+	position relative
+	z-index 1
 	background #FFF
 	&__container
 		padding-top 30px
 		padding-bottom 30px
+		
 		+rmin($md)
 			padding-top 40px
-			padding-bottom 40px
+			padding-bottom 24px
 			
 		+rmin($lg)
 			padding-top 50px
@@ -17,6 +20,9 @@
 		border-radius 4px
 		
 		+rmin($md)
+			margin-left 4px
+			margin-right 6px
+
 			height 416px
 		
 		.slick-list
@@ -30,7 +36,8 @@
 		border-radius 4px
 		height 320px
 		// background-size cover
-		+rmin($sm)
+			
+		+rmin($md)
 			height 416px
 			
 		+rmin($lg)
@@ -38,8 +45,9 @@
 			
 	&__slide_hide
 		display none
-		+rmin($sm)
-			db
+		
+		+rmin($md)
+			display block
 
 	&__image
 		object-fit cover
@@ -49,33 +57,52 @@
 		position absolute
 		top 50%
 		left 0
-		padding-top 10px
+		padding-top 39px
 		padding-right 14px
 		padding-bottom 60px
 		padding-left 20px
 		width 100%
 		color #FFF 
 		transform translateY(-50%)
+		
 		+rmin($md)
 			top 70px
+			padding-top 20px
 			padding-right 50px
+			padding-bottom 20px
 			padding-left 50px
 			transform none
 			
 	&__title
-		margin-bottom 20px
+		margin-bottom 17px
 		color #FFF 
 		font-size 24px
 		font-weight 600
 		line-height 1.416
+		
 		+rmin($md)
+			margin-bottom 31px
 			font-size 42px
 			line-height 1.238
+			
+		span
+			
+			+rmin($md)
+			
+				display block
+
 		
 	&__text
 		font-size 14px
 		font-weight 400
 		line-height 1.714
+		+rmin($md)
+			font-size 18px
+		
+		span
+			
+			+rmin($md)
+				display block
 		
 	&__link
 		position absolute
@@ -100,23 +127,25 @@
 		position absolute
 		z-index 4
 		top calc(100% - 40px)
-		left 40px
+		left 35px
 		width 90px
+		
 		+rmin($md)
 			// top 376px
-			top 336px	
-			left 70px
+			top 355px	
+			left 74px
+			width 80px
 
 	&__dots
 		position absolute
 		z-index 3
-		top calc(100% - 0px)
-		left 110px
+		top calc(100% - 2px)
+		left 100px
 		width 120px
 		
 		+rmin($md)
-			top 376px
-			left 240px
+			top 396px
+			left 223px
 			width 100%
 			text-align left	
 			
@@ -133,8 +162,10 @@
 		border-radius 50%
 		transform translateY(-50%)
 		tr(all .3s ease)
-		+rmin($sm)
+		
+		+rmin($md)
 			display none
+			
 		&:hover
 			background-color #268ae1
 			tr(all .3s ease)
@@ -153,17 +184,22 @@
 		
 	&__arrow_prev
 		left 0
-		+rmin($sm)
+		
+		+rmin($md)
 			left -5px
+			
 		.banner__arrow-icon
-			left calc(50% - 2px)
+			left calc(50% - 0px)
 			// left 50%
+				
 	&__arrow_next
 		right 0
-		+rmin($sm)
+		
+		+rmin($md)
 			right -5px
+			
 		.banner__arrow-icon
-			left calc(50% + 2px)
+			left calc(50% + 0px)
 			// left 50%
 			transform translate(-50%, -50%) rotate(180deg) 
 			
@@ -181,12 +217,18 @@
 			left calc(50% - 50px)
 			max-width 100%
 		li 
-			margin-right 8px
+			margin-right 0px
 			width 18px
 			height 18px
 			opacity .8
+			
+			+rmin($md)
+				margin-right -1px
+
 			&:last-child
 				margin-right 0
+				
+
 		
 			button
 				position relative
