--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -23,13 +23,17 @@
 		font-size 18px
 		font-weight 600
 		line-height 1.333
+		
+		+rmin($md)
+			padding-right 16px
+		
 		&:hover
 			color lighten(#222223, 10)
 		
 	&__phone-icon
 		position absolute
 		top 8px
-		right 0
+		right 2px
 		width 10px
 		height 7px
 		
@@ -40,6 +44,7 @@
 		font-weight 400
 		line-height 1.5
 		tr(color .3s ease)
+		
 		&:hover
 			color darken(#8b9095, 10)
 			tr(color .3s ease)
@@ -47,18 +52,17 @@
 
 .contacts_secondary
 	padding-left 0
-	+rmin($sm)
+	
+	+rmin($md)
 		display flex
 		flex-wrap wrap
 		align-items center
-		
 
 	+rmin($lg)
 		position relative
 		padding-left 60px
 		padding-right 22px
 		align-items flex-start
-		
 		
 	&:after
 		+rmin($lg)
@@ -70,30 +74,33 @@
 			height 210px
 			background-color #eeeeee 
 		
-			
-		
 	.contacts__title
 		margin-bottom 10px
-		+rmin($sm)
+		+rmin($md)
 			margin-bottom 20px
 			width 100%
 		
 	.contacts__w
-		+rmin($sm)
+		+rmin($md)
 			position relative
 		
 
 	.contacts__phone
 		font-weight 500
-		+rmin($sm)
+		
+		+rmin($md)
 			margin-bottom 10px
+			
 		&:last-child
-			+rmin($sm)
+			
+			+rmin($md)
 				margin-bottom 0
+				
 	.contacts__email
 		margin-top 10px
 		color #8b9095
-		+rmin($sm)
+		
+		+rmin($md)
 			position absolute
 			top calc(50% - 10px)
 			right -174px
@@ -108,11 +115,12 @@
 		
 	.contacts__button
 		margin-top 20px
+		margin-right 20px
 		border none
 		padding-top 16px
-		padding-right 20px
+		padding-right 0
 		padding-bottom 10px
-		padding-left 20px
+		padding-left 0
 		display flex
 		justify-content center
 		font-family $a 
@@ -122,8 +130,8 @@
 		text-align center
 		text-transform none
 		box-shadow none
-		+rmin($sm)
-			
+		
+		+rmin($md)
 			margin-top -20px
 			margin-left auto
 			padding-left 30px
