--- a/app/blocks/map/map.styl
+++ b/app/blocks/map/map.styl
@@ -1,5 +1,6 @@
 .map
 	position relative
+	margin-bottom 29px
 	height 350px
 	+rmin($md)
 		height 600px
@@ -12,15 +13,21 @@
 	&__container
 		position relative
 		z-index 1
+		
 		+rmin($md)
-			padding-top 50px
+			padding-top 40px
 		
 	&__top
 		border-bottom 1px solid #dadadf
 		padding-top 25px
-		margin-left 30px
-		margin-right 30px
+		margin-left 16px
+		margin-right 16px
 		background #FFF
+		
+		// +rmin($md)
+		// 	margin-left 30px
+		// 	margin-right 30px
+			
 		 
 	&__addresses
 		position absolute
@@ -31,19 +38,26 @@
 		padding-left 13px
 		padding-right 13px
 		// padding-bottom 30px
-		max-width 376px
+		max-width 370px
+		width 100%
 		height 466px
 		background-color #ffffff
 		border-radius 5px
 		box-shadow 0 2px 8px rgba(0, 0, 0, 0.1)
-		
 		display none
+		
 		+rmin($md)
+			top 40px
+			left 9px
 			display block
 
 	&__addresses_hide
 		width 10px
 		height 10px
+		
+		.nicescroll-rails
+			display none !important
+
 		
 	&__w
 		max-height 444px
@@ -107,7 +121,7 @@
 	&__list
 		position relative
 		// margin-right 5px
-		padding-right 14px
+		padding-right 10px
 		max-height 366px
 		margin-bottom 30px
 		
