--- a/app/blocks/nav/nav.styl
+++ b/app/blocks/nav/nav.styl
@@ -1,8 +1,10 @@
 .nav
 	display flex
-	+rmin($sm)
+	
+	+rmin($md)
 		position relative
 		width 100%
+		
 	&:after
 		position absolute
 		content "" 
@@ -17,14 +19,17 @@
 	.header__button,
 	.header__nav-second,
 	.header__email
-		+rmin($sm)
+		
+		+rmin($md)
+		
 			display none
 
 	&__trigger
 		position relative
 		border-right 1px solid #ececec
 		padding 20px
-		+rmin($sm)
+		
+		+rmin($md)
 			display none
 			
 	&__burger,
@@ -34,11 +39,13 @@
 		left 50%
 		transform translate(-50%, -50%)
 		tr(opacity .6s ease)
+		
 	&__burger
 		width 16px
 		height 14px
 		opacity 1
 		visibility visible
+		
 	&__burger-close
 		visibility hidden
 		opacity 0
@@ -47,24 +54,28 @@
 		
 	&__list-w
 		display none
-		+rmin($sm)
+		
+		+rmin($md)
 			width 100%
 			display block
 		
 	&__list
 		display flex
-		+rmin($sm)
+		
+		+rmin($md)
 			flex-flow row nowrap
 			justify-content space-between
 
 	&__item
 		position relative
-		+rmin($sm)
-			margin-left 16px
+		
+		+rmin($md)
+			margin-left 10px
 			
 		&:first-child
 			margin-left 0
-			+rmin($sm)
+			
+			+rmin($md)
 				margin-left 0
 			
 	&__item_active
@@ -103,8 +114,10 @@
 				white-space nowrap
 				
 	&__item_more
-		+r($sm)
+		
+		+r($md)
 			display none
+			
 		.nav__link
 			position relative
 			padding-right 15px
@@ -126,14 +139,7 @@
 			background #FFFFFF
 			box-shadow 0px 12px 48px rgba(19, 60, 84, 0.08)
 			border-radius 0px 0px 4px 4px
-			// &:after
-			// 	position absolute
-			// 	content '' 
-			// 	top -10px
-			// 	left 0
-			// 	width 100%
-			// 	height 20px
-			// 	background #FFF 
+		
 				
 			.nav__item
 				border-bottom 1px solid #EEE
@@ -194,7 +200,8 @@
 		color #787878
 		text-decoration none
 		tr(color .3s ease)
-		+rmin($sm)
+		
+		+rmin($md)
 			padding-top 18px
 			display block
 			color #383d42
@@ -203,57 +210,68 @@
 			font-weight 600
 			line-height 1.6
 			white-space nowrap
+			
 		&:hover
 			color #268AE1
 			tr(color .3s ease)
 	&__link-text
 		position relative
 		display inline-block
-		+rmin($sm)
-			padding-bottom 16px
+		
+		+rmin($md)
+			padding-bottom 18px
 		
 .nav_top
 	width auto
 	&:after
-		+rmin($sm)
+		
+		+rmin($md)
 			display none
 			
 	.nav__trigger-top
 		display none
-		+rmin($sm)
+		
+		+rmin($md)
 			display block
 			position relative
 			border-right 1px solid #ececec
 			padding 20px
-		+rmin($xl)
+			padding-right 24px 
+			
+		+rmin($lg)
 			display none
 	
 	.nav__list
 		position absolute
-		+rmin($sm)
+		
+		+rmin($md)
 			display none
-		+rmin($xl)
+			
+		+rmin($lg)
 			position static
 			display flex
 			
 	.nav__item
 		margin-right 30px
-		+rmin($sm)
+		
+		+rmin($md)
 			margin-left 0
 
 	.nav__link
 		padding-top 0
-		+rmin($xl)
+		
+		+rmin($md)
 			color #787878
 			font-family $o
 			font-size 14px
 			font-weight 400
 			line-height 1.571
 
-
 	&.nav_open
 		.nav__list
-			+rmin($sm)
+			
+			+rmin($md)
+			
 				position absolute
 				top calc(100% + 11px)
 				left 0
@@ -267,33 +285,14 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .nav_main
 	.nav__list
-		+rmin($sm)
+		
+		+rmin($md)
+			padding-right 3px
 			display flex
 			flex-flow row nowrap
 			
-					
-
-
 
 .nav_open
 	.nav__burger
@@ -331,7 +330,7 @@
 
 	.nav__list
 		position relative
-		padding-bottom 20px
+		padding-bottom 4px
 		display block
 		&:after
 			position absolute
@@ -376,12 +375,11 @@
 			height 1px
 			display none
 			background-color #ececec
-		.nav__list
 			
+		.nav__list
 			padding-top 15px
 			padding-bottom 15px
 			width 100%
-
 
 		.nav__item
 			margin-bottom 10px
@@ -394,7 +392,6 @@
 			font-size 14px
 			font-weight 400
 			line-height 1.714
-			
 
 	.header__social-menu
 		padding-top 15px
@@ -408,9 +405,3 @@
 		font-weight 400
 		line-height 1.5
 		text-decoration none
-		
-
-
-
-
-
