--- a/app/blocks/news/news.jade
+++ b/app/blocks/news/news.jade
@@ -6,9 +6,9 @@ mixin news()
 
 			h2.news__title.title Новости и акции
 
-			.row.news__articles
+			.news__articles
 
-				article.col-12.news__article.article
+				article.news__article.article
 
 					.article__inner
 
@@ -21,7 +21,7 @@ mixin news()
 								.article__date 23 Октября 2018
 					.article__link(href="#")
 
-				article.col-12.news__article.article
+				article.news__article.article
 					.article__inner
 
 						figure.article__image
@@ -33,7 +33,7 @@ mixin news()
 								.article__date 19 Октября 2018
 					.article__link(href="#")
 
-				article.col-12.news__article.article
+				article.news__article.article
 					.article__inner
 						figure.article__image
 							img(src="assets/images/content/news-1.jpg", alt="")
@@ -44,7 +44,7 @@ mixin news()
 								.article__date 11 Октября 2018
 					.article__link(href="#")
 
-				article.col-12.news__article.article
+				article.news__article.article
 					.article__inner
 						figure.article__image
 							img(src="assets/images/content/news-1.jpg", alt="")
