--- a/app/blocks/popular-sizes/popular-sizes.styl
+++ b/app/blocks/popular-sizes/popular-sizes.styl
@@ -1,24 +1,25 @@
 .popular-sizes
 	background-color #f5f6f8
 	&__container
-		padding-top 30px
-		padding-bottom 30px
-		+rmin($sm)
+		padding-top 28px
+		padding-bottom 45px
+		
+		+rmin($md)
 			padding-top 40px
 			padding-bottom 40px
 
 	&__col
 		position relative
-		
 
 	&__title
 		margin-bottom 20px
+		padding-left 4px
 
 	&__list
 		max-height 100px
-		min-height 150px
 		overflow hidden
-		+rmin($sm)
+		
+		+rmin($md)
 			max-height 100%
 			
 	&__list_full
@@ -30,15 +31,17 @@
 		background-color #ffffff
 		border-radius 4px
 		box-shadow 0 2px 5px rgba(64, 76, 84, 0.06)
-		+rmin($sm)
+		
+		+rmin($md)
 			padding-bottom 10px
 			display flex
-		+rmin($xl)
+			
+		+rmin($lg)
 			padding-right 0
 			
 		&:nth-child(2),
 		&:nth-child(3)
-			+rmin($sm)
+			+rmin($md)
 				padding-right 200px
 
 	&__size
@@ -49,15 +52,16 @@
 		font-weight 600
 		line-height 1.5
 		text-transform uppercase
-		+rmin($sm)
+		
+		+rmin($md)
 			margin-right 10px
 
 	&__links
 		display flex
 		flex-wrap wrap
-		+rmin($xl) 
-			flex-wrap nowrap
 		
+		+rmin($lg) 
+			flex-wrap nowrap
 
 	&__link
 		margin-bottom 5px
@@ -78,7 +82,8 @@
 		text-decoration none
 		border-radius 4px
 		tr(all .3s ease)
-		+rmin($xl) 
+		
+		+rmin($lg) 
 			padding-left 8px
 			padding-right 7px
 
@@ -89,10 +94,10 @@
 			color #268ae1
 			box-shadow 0 1px 2px rgba(64, 76, 84, 0.1)
 			tr(all .3s ease)
-			
 
 	&__more
 		resetbutton()
+		margin-left -15px
 		padding-top 20px
 		padding-bottom 20px
 		width 100%
@@ -104,7 +109,8 @@
 		line-height 1.714
 		text-align center
 		tr(all .3s ease)
-		+rmin($sm)
+		
+		+rmin($md)
 			display none
 
 		&:hover
@@ -116,13 +122,12 @@
 
 		span
 			position relative
-			padding-bottom 2px
+			padding-bottom 4px
 			border-bottom 1px dotted #268AE1
 			
 	&__more_true 
 		.popular-sizes__icon
 			transform translateY(-50%) rotate(180deg)
-	
 			
 	&__icon
 		position absolute
@@ -135,11 +140,14 @@
 		tr(all .3s ease)
 	
 	&__stamp
+		position relative
+		top 16px
 		margin auto
 		display flex
 		justify-content center
 		min-width 184px
-		+rmin($sm)
+		
+		+rmin($md)
 			position absolute
 			top 86px
 			right 30px
